2016-01-31  John David Anglin  <danglin@gcc.gnu.org>

	PR debug/68244
	* g++.dg/parse/parens3.C: Use register "4" on hppa.

	* gcc.dg/tree-ssa/vector-5.c: Add -fno-common option on hppa*-*-hpux*.

2016-01-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/67564
	* gfortran.dg/allocate_with_source_17.f03: New test.

2016-01-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/69546
	* gcc.dg/torture/pr69546.c: New test.

2016-01-30  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/69566
	* gfortran.dg/unlimited_polymorphic_25.f03: New test.

2016-01-30  Martin Sebor  <msebor@redhat.com>

	PR c++/68490
	* g++.dg/ext/flexary10.C: New test.

2016-01-30  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR fortran/66707
	gfortran.dg/common_23.f90: New test.

2016-01-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/65546
	* gcc.dg/vect/costmodel/ppc/costmodel-vect-31a.c: Correct
	condition being checked, and disable it when the target supports
	misaligned loads and stores.

2016-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR debug/69518
	* gcc.dg/torture/pr69518.c: New test.

2016-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/69530
	* gcc.target/i386/pr69530.c: New test.

2016-01-29  Steve Ellcey  <sellcey@imgtec.com>

	PR target/65604
	* gcc.target/mips/div-delay.c: New test.

2016-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR target/69551
	* gcc.target/i386/pr69551.c: New test.

	PR target/66137
	* gcc.target/i386/pr66137.c: New test.

2016-01-29  Andrew Bennett  <andrew.bennett@imgtec.com>

	* gcc.target/mips/p5600-bonding.c (dg-options): Force the test to be
	always built for p5600.
	* gcc.target/mips/mips.exp (mips-dg-options): Add support for the
	isa=p5600 dg-option.

2016-01-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69547
	* g++.dg/tree-ssa/pr69547.C: New testcase.

2016-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR debug/66869
	* g++.dg/warn/Wunused-function2.C: New test.

2016-01-29  Dominik Vogt  <vogt@linux.vnet.ibm.com>
